# trust_vote_api

./: .coverage  README.md  pyproject.toml
tests/: new.py  test_app.py
trust_vote_api/: .coverage  app.py  schemas.py
